force-app/main/default/objects/Finance_Package__c/Finance_Package__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Finance Package</label>
</CustomObject>