force-app/main/default/objects/Finance_Package__c/fields/Activation_Emergency_Video_PURCHASE__c.field-meta.xml
<CustomField>
    <fullName>Activation_Emergency_Video_PURCHASE__c</fullName>
    <label>Activation (Emergency &amp; Video)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>