force-app/main/default/objects/Finance_Package__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <defaultValue>12.99</defaultValue>
    <label>APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>