force-app/main/default/objects/Finance_Package__c/fields/Customer_Owned_LEASE__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owned_LEASE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owned</label>
    <type>Checkbox</type>
</CustomField>