force-app/main/default/objects/Finance_Package__c/fields/Equipment_Min_Payment__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Min_Payment__c</fullName>
    <label>Equipment Min Payment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>