force-app/main/default/objects/Finance_Package__c/fields/Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Monitoring__c</fullName>
    <label>Monitoring</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>