force-app/main/default/objects/Finance_Package__c/fields/Monthly_Payment_LEASE__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_LEASE__c</fullName>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>