force-app/main/default/objects/Finance_Package__c/fields/Monthly_Renewal_LEASE__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Renewal_LEASE__c</fullName>
    <label>Monthly Renewal</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>