force-app/main/default/objects/Finance_Package__c/fields/Monthly_Term_PURCHASE__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Term_PURCHASE__c</fullName>
    <label>Monthy Term</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>