force-app/main/default/objects/Finance_Package__c/fields/Payment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Factor__c</fullName>
    <label>Payment Factor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>