force-app/main/default/objects/Finance_Package__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <label># Payments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>