force-app/main/default/objects/Finance_Package__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>