force-app/main/default/objects/Finance_Package__c/fields/Total_Min_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Min_Payments__c</fullName>
    <label>Total Min Payments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>