force-app/main/default/objects/Finance_Package__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>