force-app/main/default/objects/Finance_Package__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <length>10</length>
    <type>Text</type>
</CustomField>