force-app/main/default/objects/Finance_Package__c/fields/X12_Months_Same_As_Cash__c.field-meta.xml
<CustomField>
    <fullName>X12_Months_Same_As_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 Months Same As Cash</label>
    <type>Checkbox</type>
</CustomField>